Case 35827: Fix - Card alignment on screens under 400px for Favorites Matcher 'See more' page

--- a/web/themes/custom/hm-public-theme/static/sass/views/_user-matching.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/views/_user-matching.scss
@@ -100,7 +100,30 @@
     }
 
     @media screen and (max-width: 400px) {
+      margin-bottom: 15px;
+      margin-left: 0;
+      margin-right: 0;
       width: 100%;
+
+      &:nth-child(4n+1) {
+        margin-left: 0;
+      }
+
+      &:nth-child(4n) {
+        margin-right: 0;
+      }
+
+      &:nth-child(3n+1) {
+        margin-left: 0
+      }
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      .views-field.views-field-title {
+        width: 100%;
+      }
 
       a .bio-card--image {
         background: $black;
@@ -112,6 +135,7 @@
         margin-right: auto;
         width: auto;
       }
+
 
     }
 
